--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hey
+          Hey<br>
           <span id="name">xyz</span>
         </h1>
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>It's 20/10!!! :D</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Happy Vietnamese Women's Day!! Yeee! Love and blah blah...
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -36,7 +36,7 @@
         <p class="idea-1">That's what I was going to do.</p>
         <p class="idea-2">But then I stopped.</p>
         <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+          I realized, I wanted to do something <strong>special</strong>.
         </p>
         <p class="idea-4">Because,</p>
         <p class="idea-5">
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
+          <h3 class="wish-hbd">Happy 20/10 My Gorgeous!</h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
