Update web title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             property="og:image"
             content="https://scontent.fsgn2-7.fna.fbcdn.net/v/t39.30808-6/464175060_2317425641929981_96586257157640712_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_ohc=WZJ3NLjj_IsQ7kNvgFHlxRJ&_nc_zt=23&_nc_ht=scontent.fsgn2-7.fna&_nc_gid=ACxzeLCAWBGJnDip3abIarU&oh=00_AYCTD_gDpm1bpDJZvhVlz4drYW2aEQpxxHs2sRMUpnV5CA&oe=671B1687"
         />
-    <title>Happy Valentine :)</title>
+    <title>Happy 20/10 :)</title>
     <link
       rel="stylesheet"
     />
